--- a/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
+++ b/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
@@ -1,8 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Webscraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this blog post I will discuss the following question:  \n",
+    "    *What movie or TV shows share actors with your favorite movie or show?*\n",
+    "\n",
+    "And the link to my project repository:  \n",
+    "    https://github.com/libbyrencc/post/tree/main/post2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to setup our webscraping environment, remember to install scrapy package in your conda environment.\n",
+    "\n",
+    "And run the following command in your terminal to initialize the project:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'false'\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%script false --no-raise-error \n",
+    "# the line above is to skip this cell from being run\n",
+    "\n",
+    "conda activate PIC16B\n",
+    "scrapy startproject IMDB_scraper\n",
+    "cd IMDB_scraper\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "7587a03c",
    "metadata": {},
    "outputs": [],
@@ -14,8 +70,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: %%script is a cell magic, but the cell body is empty.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "54c65c74",
    "metadata": {},
    "outputs": [
@@ -122,7 +198,7 @@
        "[890 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "fee4c89c",
    "metadata": {},
    "outputs": [],
@@ -144,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "35965818",
    "metadata": {},
    "outputs": [],
@@ -154,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "f15b269b",
    "metadata": {},
    "outputs": [
@@ -261,7 +337,7 @@
        "[668 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "113c680d",
    "metadata": {},
    "outputs": [],
@@ -282,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "51abc4ca",
    "metadata": {},
    "outputs": [
@@ -380,7 +456,7 @@
        "9  Beginning of the Great Revival      5"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,9 +475,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "6787530bf9925b057af33f954282f7ad07558b12920f3eef54087b2f6236d6d8"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
