--- a/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
+++ b/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,51 @@
     "scrapy startproject IMDB_scraper\n",
     "cd IMDB_scraper\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the file of scraper should be constructed correctly. Go to /IMDB_scraper/spiders/, and create a file \"imdb_spider.py\". And add following code to the start of the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'false'\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%script false --no-raise-error \n",
+    "# the line above is to skip this cell from being run\n",
+    "\n",
+    "import scrapy\n",
+    "\n",
+    "class ImdbSpider(scrapy.Spider):\n",
+    "    name = 'imdb_spider'\n",
+    "    \n",
+    "    start_urls = ['https://www.imdb.com/title/tt1533117/']\n",
+    "                #You can change your favorite film's url here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implement three parsing methods for the ImdbSpider class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
