--- a/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
+++ b/post2/IMDB_scraper/IMDB_scraper/post2.ipynb
@@ -106,9 +106,14 @@
    "source": [
     " def parse(self, response):\n",
     "        next_page = response.css(\"a.ipc-metadata-list-item__icon-link\").attrib[\"href\"]\n",
+    "        #Find the partial url by located tag <a> with\n",
+    "        #class= ipc-metadata-list-item__icon-link\n",
+    "        # and url is in \"herf\"\n",
     "        if next_page:           \n",
-    "            next_page=response.urljoin(next_page) #Here we make the URL complete\n",
-    "            yield scrapy.Request(next_page,callback= self.prase_full_credits)"
+    "            next_page=response.urljoin(next_page) \n",
+    "            #Here we make the URL complete\n",
+    "            yield scrapy.Request(next_page,callback= self.prase_full_credits)\n",
+    "            #Call next function"
    ]
   },
   {
@@ -119,7 +124,10 @@
     "### 2. prase_full_credits(self, response)  \n",
     "Now we are at the Cast&Crew page, next we should look at each actors' page, and call the next method prase_actor_page(self,response)  \n",
     "\n",
-    "We will use the css selector and the list comprehension to mimic the process of clicking on the headshots on this page."
+    "We will use the css selector and the list comprehension to mimic the process of clicking on the headshots on this page.\n",
+    "\n",
+    "Here we select `<a>` tag, which is under `<td>` tag with `class ='primary_photo'`, and url is still in `\"herf\"`.\n",
+    "Then we iterate each Cast&Crews' URL, use it as a parameter to call next method."
    ]
   },
   {
@@ -154,10 +162,15 @@
    "outputs": [],
    "source": [
     "def prase_actor_page(self,response):\n",
-    "        actor_name=response.css(\"h1.header span.itemprop::text\").get() #get actor's name\n",
-    "        for quote in response.css(\"div.filmo-row\"): #get the name of each his/her works\n",
+    "        actor_name=response.css(\"h1.header span.itemprop::text\").get() \n",
+    "        #get actor's name\n",
+    "        #the name is in <h1 class=\"header\"><span class+\"itemprop\">name<\\span><\\h1>\n",
+    "        for quote in response.css(\"div.filmo-row\"): \n",
+    "            #get a list of  his/her works\n",
     "            movie_or_TV_name=quote.css(\"b a::text\").get()\n",
-    "            yield {\"actor\" : actor_name, \"movie_or_TV_name\" : movie_or_TV_name} #yeild an dictionary"
+    "            # the name is in <b> <a>work name<\\a><\\b>, under tag <div> with class =\"filmo-row\"\n",
+    "            yield {\"actor\" : actor_name, \"movie_or_TV_name\" : movie_or_TV_name} \n",
+    "            #yeild an dictionary"
    ]
   },
   {
