--- a/post6/post6.ipynb
+++ b/post6/post6.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e273ed74",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "53ec530b",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "dfe24ef0",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "5ab436cd",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "(180, 45)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "9cfa29c4",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "2df929c8",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "a515f720",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "5df18d69",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "c11c4189",
    "metadata": {},
    "outputs": [],
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "f1a05056",
    "metadata": {},
    "outputs": [],
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "57be7bd2",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "45302b6c",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "8d865877",
    "metadata": {},
    "outputs": [],
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "c175a12c",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "b46ca75c",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
@@ -949,36 +949,36 @@
       " text_vectorization (TextVector  (None, 500)         0           ['title[0][0]',                  \n",
       " ization)                                                         'text[0][0]']                   \n",
       "                                                                                                  \n",
-      " embedding_title (Embedding)    (None, 500, 3)       6000        ['text_vectorization[4][0]']     \n",
+      " embedding_title (Embedding)    (None, 500, 3)       6000        ['text_vectorization[1][0]']     \n",
       "                                                                                                  \n",
-      " embedding_text (Embedding)     (None, 500, 3)       6000        ['text_vectorization[5][0]']     \n",
+      " embedding_text (Embedding)     (None, 500, 3)       6000        ['text_vectorization[2][0]']     \n",
       "                                                                                                  \n",
-      " dropout_8 (Dropout)            (None, 500, 3)       0           ['embedding_title[0][0]']        \n",
+      " dropout_2 (Dropout)            (None, 500, 3)       0           ['embedding_title[0][0]']        \n",
       "                                                                                                  \n",
-      " dropout_10 (Dropout)           (None, 500, 3)       0           ['embedding_text[0][0]']         \n",
+      " dropout_4 (Dropout)            (None, 500, 3)       0           ['embedding_text[0][0]']         \n",
       "                                                                                                  \n",
-      " global_average_pooling1d_4 (Gl  (None, 3)           0           ['dropout_8[0][0]']              \n",
+      " global_average_pooling1d_1 (Gl  (None, 3)           0           ['dropout_2[0][0]']              \n",
       " obalAveragePooling1D)                                                                            \n",
       "                                                                                                  \n",
-      " global_average_pooling1d_5 (Gl  (None, 3)           0           ['dropout_10[0][0]']             \n",
+      " global_average_pooling1d_2 (Gl  (None, 3)           0           ['dropout_4[0][0]']              \n",
       " obalAveragePooling1D)                                                                            \n",
       "                                                                                                  \n",
-      " dropout_9 (Dropout)            (None, 3)            0           ['global_average_pooling1d_4[0][0\n",
+      " dropout_3 (Dropout)            (None, 3)            0           ['global_average_pooling1d_1[0][0\n",
       "                                                                 ]']                              \n",
       "                                                                                                  \n",
-      " dropout_11 (Dropout)           (None, 3)            0           ['global_average_pooling1d_5[0][0\n",
+      " dropout_5 (Dropout)            (None, 3)            0           ['global_average_pooling1d_2[0][0\n",
       "                                                                 ]']                              \n",
       "                                                                                                  \n",
-      " dense_5 (Dense)                (None, 32)           128         ['dropout_9[0][0]']              \n",
+      " dense_1 (Dense)                (None, 32)           128         ['dropout_3[0][0]']              \n",
       "                                                                                                  \n",
-      " dense_6 (Dense)                (None, 16)           64          ['dropout_11[0][0]']             \n",
+      " dense_2 (Dense)                (None, 16)           64          ['dropout_5[0][0]']              \n",
       "                                                                                                  \n",
-      " concatenate_1 (Concatenate)    (None, 48)           0           ['dense_5[0][0]',                \n",
-      "                                                                  'dense_6[0][0]']                \n",
+      " concatenate (Concatenate)      (None, 48)           0           ['dense_1[0][0]',                \n",
+      "                                                                  'dense_2[0][0]']                \n",
       "                                                                                                  \n",
-      " dense_7 (Dense)                (None, 32)           1568        ['concatenate_1[0][0]']          \n",
+      " dense_3 (Dense)                (None, 32)           1568        ['concatenate[0][0]']            \n",
       "                                                                                                  \n",
-      " fake (Dense)                   (None, 2)            66          ['dense_7[0][0]']                \n",
+      " fake (Dense)                   (None, 2)            66          ['dense_3[0][0]']                \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
       "Total params: 13,826\n",
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "95740b2b",
    "metadata": {},
    "outputs": [],
@@ -1037,10 +1037,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d751c881",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "180/180 [==============================] - 11s 41ms/step - loss: 0.6425 - accuracy: 0.6344 - val_loss: 0.4419 - val_accuracy: 0.9081\n",
+      "Epoch 2/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.2686 - accuracy: 0.9283 - val_loss: 0.1593 - val_accuracy: 0.9575\n",
+      "Epoch 3/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.1372 - accuracy: 0.9641 - val_loss: 0.0925 - val_accuracy: 0.9757\n",
+      "Epoch 4/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0831 - accuracy: 0.9775 - val_loss: 0.0575 - val_accuracy: 0.9849\n",
+      "Epoch 5/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0580 - accuracy: 0.9834 - val_loss: 0.0404 - val_accuracy: 0.9879\n",
+      "Epoch 6/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0410 - accuracy: 0.9882 - val_loss: 0.0267 - val_accuracy: 0.9921\n",
+      "Epoch 7/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0306 - accuracy: 0.9909 - val_loss: 0.0278 - val_accuracy: 0.9910\n",
+      "Epoch 8/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0282 - accuracy: 0.9916 - val_loss: 0.0177 - val_accuracy: 0.9942\n",
+      "Epoch 9/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0259 - accuracy: 0.9922 - val_loss: 0.0140 - val_accuracy: 0.9964\n",
+      "Epoch 10/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0225 - accuracy: 0.9928 - val_loss: 0.0096 - val_accuracy: 0.9980\n",
+      "Epoch 11/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0165 - accuracy: 0.9952 - val_loss: 0.0204 - val_accuracy: 0.9926\n",
+      "Epoch 12/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0196 - accuracy: 0.9936 - val_loss: 0.0075 - val_accuracy: 0.9982\n",
+      "Epoch 13/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0136 - accuracy: 0.9961 - val_loss: 0.0069 - val_accuracy: 0.9984\n",
+      "Epoch 14/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0122 - accuracy: 0.9963 - val_loss: 0.0086 - val_accuracy: 0.9978\n",
+      "Epoch 15/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0111 - accuracy: 0.9968 - val_loss: 0.0104 - val_accuracy: 0.9960\n",
+      "Epoch 16/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0098 - accuracy: 0.9969 - val_loss: 0.0031 - val_accuracy: 0.9993\n",
+      "Epoch 17/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0117 - accuracy: 0.9957 - val_loss: 0.0053 - val_accuracy: 0.9989\n",
+      "Epoch 18/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0126 - accuracy: 0.9959 - val_loss: 0.0016 - val_accuracy: 0.9996\n",
+      "Epoch 19/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0093 - accuracy: 0.9971 - val_loss: 0.0022 - val_accuracy: 0.9998\n",
+      "Epoch 20/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0092 - accuracy: 0.9969 - val_loss: 0.0041 - val_accuracy: 0.9982\n",
+      "Epoch 21/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0090 - accuracy: 0.9973 - val_loss: 0.0019 - val_accuracy: 0.9996\n",
+      "Epoch 22/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0076 - accuracy: 0.9977 - val_loss: 0.0023 - val_accuracy: 0.9991\n",
+      "Epoch 23/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0082 - accuracy: 0.9975 - val_loss: 0.0011 - val_accuracy: 0.9998\n",
+      "Epoch 24/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0072 - accuracy: 0.9980 - val_loss: 9.1774e-04 - val_accuracy: 0.9998\n",
+      "Epoch 25/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0074 - accuracy: 0.9977 - val_loss: 0.0015 - val_accuracy: 0.9998\n",
+      "Epoch 26/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0073 - accuracy: 0.9975 - val_loss: 0.0039 - val_accuracy: 0.9993\n",
+      "Epoch 27/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0071 - accuracy: 0.9977 - val_loss: 0.0021 - val_accuracy: 0.9993\n",
+      "Epoch 28/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0067 - accuracy: 0.9979 - val_loss: 8.7825e-04 - val_accuracy: 0.9998\n",
+      "Epoch 29/30\n",
+      "180/180 [==============================] - 7s 41ms/step - loss: 0.0043 - accuracy: 0.9988 - val_loss: 0.0018 - val_accuracy: 0.9996\n",
+      "Epoch 30/30\n",
+      "180/180 [==============================] - 7s 40ms/step - loss: 0.0065 - accuracy: 0.9974 - val_loss: 0.0016 - val_accuracy: 0.9996\n"
+     ]
+    }
+   ],
    "source": [
     "history = model_3.fit(train, \n",
     "                    validation_data=val,\n",
@@ -1104,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "647b398d",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "69e06555",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1225,7 @@
     }
    ],
    "source": [
-    "model_3.evaluate(test_data)"
+    "model_3.evaluate(test_data.)"
    ]
   },
   {
